<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="48dp"
        android:orientation="vertical"
        android:baselineAligned="false">

        <EditText
            android:id="@+id/config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="240dp"
            android:inputType="textMultiLine|textNoSuggestions"
            android:textSize="20sp"
            android:hint="@string/enter_config" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/saveConfig"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="saveConfig"
                android:contentDescription="@string/save"
                android:src="@android:drawable/ic_menu_save"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/loadConfig"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/load"
                android:gravity="center"
                android:onClick="loadConfig"
                android:src="@android:drawable/ic_menu_upload"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/applyConfig"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="applyConfig"
                android:contentDescription="@string/apply"
                android:src="@android:drawable/ic_menu_manage" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:text="@string/telegram" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startTg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:onClick="startTg"
                android:text="@string/start"
                android:textSize="24sp" />

            <Button
                android:id="@+id/stopTg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="stopTg"
                android:text="@string/stop"
                android:textSize="24sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:text="@string/vk" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startVk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:onClick="startVk"
                android:text="@string/start"
                android:textSize="24sp" />

            <Button
                android:id="@+id/stopVk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="stopVk"
                android:text="@string/stop"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
